--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "djodjibot for twitch",
   "main": "bot.js",
   "dependencies": {
-    "express": "^4.17.1",
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "html": "^1.0.0",
+    "path": "^0.12.7",
+    "random-js": "^2.1.0",
     "socket.io": "^4.0.2",
     "socket.io-client": "^4.0.1",
-    "tmi.js": "^1.8.3",
-    "path": "^0.12.7"
+    "tmi.js": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
