--- a/config.json.dist
+++ b/config.json.dist
@@ -1,5 +1,10 @@
 {
   "port": 3000,
+  "ssl": {
+    "enabled": false,
+    "key": "",
+    "cert": ""
+  },
   "nodecgHost": "http://localhost:3200",
   "kingSlayerCost": 1000,
   "kingSlayerNeeded": 10000,
